# github_trending_cli

./: .gitignore  LICENSE  README.md  github_api.py  main.py  pyproject.toml  requirements.txt  ui.py
src/: api.py  ui.py  utils.py
